Bug 1178214 - Return INIT_ERROR when video resolution exceeds hw codec capability. r=sotaro